Realization of StreamPractice Small fixes